[gd_scene load_steps=3 format=2]

[ext_resource path="res://interior/random_split_display.gd" type="Script" id=1]
[ext_resource path="res://interior/random_split.gd" type="Script" id=2]

[node name="random_split_display" type="Node2D"]
script = ExtResource( 1 )

[node name="random_split" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.1, 0.1 )

[node name="outline" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -29.7778, -15.8574, -20.8889, -26.5241, 16.8889, -26.9686, 28, -15.8574, 44.8889, -15.8574, 44, 6.36478, 24.4444, 6.80922, 24.8889, -6.07967, -31.1111, -5.19078, -32.8889, 7.6981, -46.6667, 8.587, -45.3333, -16.3019 )

[node name="door1" type="Node2D" parent="."]
position = Vector2( -1.7696, -6.82561 )

[node name="door2" type="Node2D" parent="."]
position = Vector2( 45.7568, -0.505608 )

[node name="door3" type="Node2D" parent="."]
position = Vector2( -0.5056, -28.3136 )

